--- a/LifeCorp/WebContent/newOrder.xhtml
+++ b/LifeCorp/WebContent/newOrder.xhtml
@@ -8,6 +8,9 @@
 
 <ui:composition template="/templates/StandardTemplate.xhtml">
 	<ui:define name="content">
+	<!-- TODO ForEach Through Product List-->
+	
+	
 	</ui:define>
 </ui:composition>
 </html>
