--- a/LifeCorp/WebContent/newOrder.xhtml
+++ b/LifeCorp/WebContent/newOrder.xhtml
@@ -8,9 +8,7 @@
 
 <ui:composition template="/templates/StandardTemplate.xhtml">
 	<ui:define name="content">
-	<!-- TODO ForEach Through Product List-->
-	
-	
+	    Add your content here or delete to use the default
 	</ui:define>
 </ui:composition>
 </html>
